properly load sql driver jar